--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta name="description" content="My first website">
+        <meta name="keywords" content="INFO1601, uwi, web">
+        <title>My First Page</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p>This my first website</p><br>
-        <p>Welcome</p>
+        <header>
+            <h1>This is my first website</h1>
+        </header>
+
+        <article>
+            <section>
+                <h2>Welcome</h2>
+            </section>
+
+           <section>
+                <figure>
+                    <img src="https://placekitten.com/200/200" alt="a random cat">
+                    <figcaption>Fig 1. A random cat</figcaption>
+                </figure>
+           </section>
+
+           <section>
+               <details>
+                   <summary>Hobbies</summary>
+                   <ul>
+                    <li>Gaming</li>
+                    <li>Writing</li>
+                    <li>Music</li>
+                    <li>Drawing</li>
+                    <li>Coding</li>
+                </ul>
+               </details>
+            </section>
+
+            <dialog id="mydialog">
+                This is a dialog
+                <a href="javascript:mydialog.removeAttribute('open')">close</a>
+            </dialog>
+
+            <a href="javascript:document.querySelector('#mydialog').setAttribute('open', true)">
+                Open Dialog
+            </a>
+
+        </article>
+           
     </body>
-</html>
+<html>
